[gd_scene load_steps=11 format=2]

[ext_resource path="res://SpeechBubble.tscn" type="PackedScene" id=1]
[ext_resource path="res://FlyableSpaceship.gd" type="Script" id=2]
[ext_resource path="res://NPCMoveEngine.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/misc/spaceship_down.png" type="Texture" id=4]
[ext_resource path="res://assets/img/misc/spaceship_left.png" type="Texture" id=5]
[ext_resource path="res://assets/img/misc/spaceship_up.png" type="Texture" id=6]
[ext_resource path="res://assets/img/misc/spaceship_right.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=196]
radius = 55.4437

[sub_resource type="SpriteFrames" id=199]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "walking_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "walking_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "walking_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "walking_up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=197]
radius = 12.0
height = 18.2998

[node name="FlyableSpaceship" type="KinematicBody2D"]
position = Vector2( 7406, -246 )
rotation = 1.5708
z_index = 3
script = ExtResource( 2 )

[node name="NPCMoveEngine" parent="." instance=ExtResource( 3 )]

[node name="SpeechBubble" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -50 )
scale = Vector2( 0.3, 0.3 )
z_index = 100

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
z_index = 3
shape = SubResource( 196 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 3
frames = SubResource( 199 )
animation = "walking_down"

[node name="Body" type="CollisionShape2D" parent="."]
scale = Vector2( 1.10202, 0.992919 )
z_index = 4
shape = SubResource( 197 )

[connection signal="finished_moving" from="NPCMoveEngine" to="." method="_on_NPCMoveEngine_finished_moving"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
